# gescheftmacher

./: .gitignore  Cargo.toml  README.md
src/: .main.rs.rustfmt  datagetter.rs  goonmetrics.rs  main.rs  ui.rs
ui/: appwindow.slint
