[package]
name = "gescheftmacher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = "0.12.3"
serde = { version = "1.0.197", features = ["derive"]}
serde-xml-rs = "0.6.0"
tokio = { version = "1.37.0", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
